demos/5. PersistentVolumeClaim.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-with-pvc
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-with-pvc
  template:
    metadata:
      labels:
        app: app-with-pvc
    spec:
      containers:
        - name: app-with-pvc
          image: mcr.microsoft.com/mssql/server:2022-latest
          volumeMounts:
            - name: data
              mountPath: /data          
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: my-pvc
