demos/CrashLoopBackOff.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-simple
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-simple
  template:
    metadata:
      labels:
        app: app-simple
    spec:
      containers:
        - name: app-simple
          image: mcr.microsoft.com/dotnet/samples:aspnetapp
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
