demos/OOMKilled.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-memory-heavy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-memory-heavy
  template:
    metadata:
      labels:
        app: app-memory-heavy
    spec:
      containers:
        - name: app-memory-heavy
          image: mcr.microsoft.com/azure-cognitive-services/textanalytics/sentiment:3.0-fr
          resources:
            limits:
              memory: "100Mi"
            requests:
              memory: "50Mi"
          livenessProbe:
            exec:
              command: ["sh", "-c", "cat /proc/uptime"]
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["sh", "-c", "cat /proc/uptime"]
            initialDelaySeconds: 5
            periodSeconds: 10
