demos/pod-crashloopbackoff.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: dev
spec:
  containers:
  - name: alpine
    image: alpine:3.6
    command: ["bash"]  # 'bash' n'est pas installé dans alpine:3.6
