demos/pod-pending.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-0
  namespace: dev
spec:
  containers:
  - name: alpine
    image: alpine:3.6
    command: ["sleep", "3600"]
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: kubernetes.io/hostname
            operator: In
            values:
            - non-existent-node  # Ce nœud n'existe pas
