demos/ingress-error.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-test
  namespace: dev
spec:
  ingressClassName: nginxnew  # Classe Ingress inexistante
  rules:
  - host: my-test-app.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-test  # Service inexistant
            port:
              number: 80
